--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.5.0",
     "@quasar/app": "^2.0.0",
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
     "babel-eslint": "^10.0.1",
